set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(COMPONENT_NAME core)
set(JSONCPP_INCLUDE ${PROJECT_SOURCE_DIR}/jsoncpp/include)
include_directories(${JSONCPP_INCLUDE})
set(NEAPU_BASE_INCLUDE "D:/code/neaputools/base" CACHE PATH "NEAPU_BASE INCLUDE" FORCE)
set(NEAPU_BASE_DIR "D:/code/neaputools/build/base/${CMAKE_BUILD_TYPE}" CACHE PATH "NEAPU_BASE DIR" FORCE)
message(${NEAPU_BASE_INCLUDE})
include_directories(${NEAPU_BASE_INCLUDE})
file(GLOB SRC_FILES "*.cpp")
file(GLOB HEAD_FILES "*.h")
message(${SRC_FILES})
message(${HEAD_FILES})
add_library(${COMPONENT_NAME} STATIC ${HEAD_FILES} ${SRC_FILES})
find_library(LIB_JSONCPP jsoncpp ../jsoncpp/win32/${CMAKE_BUILD_TYPE})
find_library(LIB_NEAPU_BASE NeapuBase ${NEAPU_BASE_DIR})
target_link_libraries(${COMPONENT_NAME} PUBLIC ${LIB_JSONCPP} ${LIB_NEAPU_BASE})