set(LIB_NAME ExToolKitCore)
include_directories(../../exapi)
set(NEAPU_BASE_INCLUDE "D:/code/neaputools/base" CACHE PATH "NEAPU_BASE INCLUDE" FORCE)
set(NEAPU_BASE_DIR "D:/code/neaputools/build/base/${CMAKE_BUILD_TYPE}" CACHE PATH "NEAPU_BASE DIR" FORCE)
message("----------" ${CMAKE_BUILD_TYPE})
message("----------" ${NEAPU_BASE_DIR})
include_directories(${NEAPU_BASE_INCLUDE})
file(GLOB SRC_FILES "./*.cpp")
add_library(${LIB_NAME} STATIC ${SRC_FILES})
find_library(LIB_NEAPU_BASE NeapuBase ${NEAPU_BASE_DIR})
target_link_libraries(${LIB_NAME} exapi ${LIB_NEAPU_BASE})